--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "seed:run": "ts-node -r tsconfig-paths/register node_modules/knex/bin/cli.js seed:run --knexfile ./knexfile.js"
   },
   "dependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "bcrypt": "^6.0.0",
     "better-sqlite3": "^12.2.0",
+    "fs": "^0.0.1-security",
     "knex": "^3.1.0",
+    "ldrs": "^1.1.7",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.3",
     "next": "15.4.6",
@@ -24,6 +28,7 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "sqlite3": "^5.1.7",
+    "styled-components": "^6.1.19",
     "tedious": "^18.6.1",
     "zod": "^4.0.17"
   },
