--- a/package.json
+++ b/package.json
@@ -10,12 +10,24 @@
     "seed:run": "ts-node -r tsconfig-paths/register node_modules/knex/bin/cli.js seed:run --knexfile ./knexfile.js"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
     "better-sqlite3": "^12.2.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "fs": "^0.0.1-security",
     "knex": "^3.1.0",
     "ldrs": "^1.1.7",
+    "lucide-react": "^0.542.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.3",
     "next": "15.4.6",
@@ -29,6 +41,7 @@
     "react-icons": "^5.5.0",
     "sqlite3": "^5.1.7",
     "styled-components": "^6.1.19",
+    "tailwind-merge": "^3.3.1",
     "tedious": "^18.6.1",
     "zod": "^4.0.17"
   },
@@ -44,6 +57,7 @@
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
+    "tw-animate-css": "^1.3.7",
     "typescript": "^5"
   }
 }
