--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "knex": "^3.1.0",
     "ldrs": "^1.1.7",
     "lucide-react": "^0.542.0",
+    "motion": "^12.23.12",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.3",
     "next": "15.4.6",
