--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "seed:run": "ts-node -r tsconfig-paths/register node_modules/knex/bin/cli.js seed:run --knexfile ./knexfile.js"
-  },
+    "rb" : "knex migrate:rollback",
+    "lst": "knex migrate:latest",
+    "seed" : "knex seed:run"
+    },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -29,7 +31,6 @@
     "knex": "^3.1.0",
     "ldrs": "^1.1.7",
     "lucide-react": "^0.542.0",
-    "motion": "^12.23.12",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.3",
     "next": "15.4.6",
