--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "fs": "^0.0.1-security",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "ldrs": "^1.1.7",
     "lucide-react": "^0.542.0",
@@ -55,6 +57,8 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/feather-icons": "^4.29.4",
+    "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
