added some extra seed files as well as internalization to the application see message folder

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
@@ -40,6 +41,7 @@
     "mysql2": "^3.14.3",
     "next": "15.4.6",
     "next-auth": "^5.0.0-beta.29",
+    "next-intl": "^4.3.9",
     "objection": "^3.1.5",
     "oracledb": "^6.9.0",
     "pg": "^8.16.3",
@@ -51,6 +53,7 @@
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
     "tedious": "^18.6.1",
+    "vaul": "^1.1.2",
     "zod": "^4.0.17"
   },
   "devDependencies": {
