--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "ldrs": "^1.1.7",
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "lucide-react": "^0.542.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.3",
@@ -50,6 +52,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0-rc.2",
     "sqlite3": "^5.1.7",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
@@ -64,6 +67,7 @@
     "@types/feather-icons": "^4.29.4",
     "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
