--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "rb": "knex migrate:rollback",
     "lst": "knex migrate:latest",
-    "seed": "knex seed:run"
+    "seed": "knex seed:run",
+    "make" : "knex seed:make"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
